--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.tanokun</groupId>
     <artifactId>FileManager</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <packaging>jar</packaging>
 
     <name>FileManager</name>
@@ -72,9 +72,9 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.15.2-R0.1-SNAPSHOT</version>
+            <version>1.14.4-R0.1-SNAPSHOT</version>
             <scope>system</scope>
-            <systemPath>${basedir}/lib/patched_1.12.2.jar</systemPath>
+            <systemPath>${basedir}/lib/patched_1.14.4.jar</systemPath>
         </dependency>
 
         <dependency>
